// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BookCard matches snapshot (dark mode) 1`] = `
<div>
  <div>
    <div
      aria-label="Atomic Habits by James Clear on Goodreads"
      class="MuiBox-root css-md987m"
      data-testid="book-card"
      role="link"
    >
      <div
        class="MuiBox-root css-1eekpyd"
      >
        <img
          alt="Cover of Atomic Habits"
          class="css-ekopze"
          loading="lazy"
          src="https://example.com/cover.jpg"
          style="opacity: 0; transition: opacity 0.4s;"
        />
      </div>
      <div
        class="MuiBox-root css-1hdogsu"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1dmnofy-MuiTypography-root"
        >
          Atomic Habits
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1f3q1nn-MuiTypography-root"
        >
          James Clear
        </p>
        <div
          class="MuiBox-root css-jv665g"
        >
          <div
            class="MuiBox-root css-uklcv"
          >
            <div
              class="MuiBox-root css-1gr6vz7"
            >
              <svg
                fill="currentColor"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                />
              </svg>
            </div>
            <div
              class="MuiBox-root css-1gr6vz7"
            >
              <svg
                fill="currentColor"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                />
              </svg>
            </div>
            <div
              class="MuiBox-root css-1gr6vz7"
            >
              <svg
                fill="currentColor"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                />
              </svg>
            </div>
            <div
              class="MuiBox-root css-1gr6vz7"
            >
              <svg
                fill="currentColor"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                />
              </svg>
            </div>
            <div
              class="MuiBox-root css-1gr6vz7"
            >
              <svg
                fill="currentColor"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                />
              </svg>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-lbxpk1-MuiTypography-root"
          >
            Jan 2025
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookCard matches snapshot (light mode) 1`] = `
<div>
  <div>
    <div
      aria-label="Atomic Habits by James Clear on Goodreads"
      class="MuiBox-root css-1l2tm4f"
      data-testid="book-card"
      role="link"
    >
      <div
        class="MuiBox-root css-1duyvry"
      >
        <img
          alt="Cover of Atomic Habits"
          class="css-ekopze"
          loading="lazy"
          src="https://example.com/cover.jpg"
          style="opacity: 0; transition: opacity 0.4s;"
        />
      </div>
      <div
        class="MuiBox-root css-1hdogsu"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1hon4yy-MuiTypography-root"
        >
          Atomic Habits
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-e99om8-MuiTypography-root"
        >
          James Clear
        </p>
        <div
          class="MuiBox-root css-jv665g"
        >
          <div
            class="MuiBox-root css-uklcv"
          >
            <div
              class="MuiBox-root css-1gr6vz7"
            >
              <svg
                fill="currentColor"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                />
              </svg>
            </div>
            <div
              class="MuiBox-root css-1gr6vz7"
            >
              <svg
                fill="currentColor"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                />
              </svg>
            </div>
            <div
              class="MuiBox-root css-1gr6vz7"
            >
              <svg
                fill="currentColor"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                />
              </svg>
            </div>
            <div
              class="MuiBox-root css-1gr6vz7"
            >
              <svg
                fill="currentColor"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                />
              </svg>
            </div>
            <div
              class="MuiBox-root css-1gr6vz7"
            >
              <svg
                fill="currentColor"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                />
              </svg>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-kppqcv-MuiTypography-root"
          >
            Jan 2025
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
